--- a/WebApplication7/Views/Shared/_Layout.cshtml
+++ b/WebApplication7/Views/Shared/_Layout.cshtml
@@ -75,8 +75,8 @@
 		</nav>
 	</header>
 	<div class="container-fluid body-content">
-			<div style="">
-						<strong>@ViewBag.Title</strong>
+			<div class="container-fluid "style="background-color:lightgray">
+						<strong class="text-primary">@ViewBag.Title</strong>
 			</div>
 		<div>
 			<partial name="_CookieConsentPartial" />
